Fix fake/no install problem when checking src file names.
git-svn-id: https://svn.r-project.org/R/trunk@51104 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/scripts/check.in
+++ b/src/scripts/check.in
@@ -607,7 +607,9 @@ foreach my $pkg (@ARGV) {
 		my $dir = &file_path($pkgdir, "src");
 		if(-d $dir) {
 		    chdir($dir);
-		    if(!(-f "Makefile") && !(-f "Makefile.win")) {
+		    if(!(-f "Makefile") &&
+		       !(-f "Makefile.win") &&
+		       !(-f "Makefile.in" && !$opt_install)) {
 			opendir(DIR, ".") or die "cannot opendir $dir: $!";
 			@srcfiles = grep {
 			    !(/\.$exts$/ || /^Makevars/ || /-win\.def$/ )
