more use of etc/x64/Makeconf on Win64
git-svn-id: https://svn.r-project.org/R/trunk@51123 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/fixed/Makefile
+++ b/src/gnuwin32/fixed/Makefile
@@ -40,6 +40,7 @@ ifeq ($(strip $(WIN)),64)
 	  etc/Makeconf > $(R_HOME)/etc/Makeconf
 	$(MKDIR) -p $(R_HOME)/etc/x64
 	$(CP) -p $(R_HOME)/etc/Makeconf $(R_HOME)/etc/x64/Makeconf
+	$(RM) $(R_HOME)/etc/Makeconf
 else
 	$(SED) -e "s/IMPDIR = bin/IMPDIR = $(IMPDIR)/" \
 	  -e "s|LOCAL_SOFT =|LOCAL_SOFT = $(LOCAL_SOFT)|" \
