use preferred capitalization of MinGW
git-svn-id: https://svn.r-project.org/R/trunk@51157 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/extra/graphapp/Makefile.win
+++ b/src/extra/graphapp/Makefile.win
@@ -28,7 +28,7 @@ endif
 
 libRgraphapp.dll.a: Rgraphapp.def
 
-## mingw symbols have trailing @, mingw64 do not
+## MinGW symbols have trailing @, MinGW-w64 do not
 Rgraphapp.def: $(OBJECTS)
 	@$(ECHO) EXPORTS > $@
 	@$(NM) $^ | $(SED) -n 's/^.* [BCDRT] _/ /p' | $(SED) -e 's/@16//' | $(SORT) | uniq > g.def
