add target for rw-FAQ.pdf
git-svn-id: https://svn.r-project.org/R/trunk@51182 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/Makefile
+++ b/src/gnuwin32/Makefile
@@ -337,6 +337,12 @@ rw-FAQ: rw-FAQ.texi ../../VERSION
 	@$(SED) $(SEDVER) $< | \
 	  makeinfo --no-headers --number-sections -o $@
 
+rw-FAQ.pdf: rw-FAQ.texi ../../VERSION
+	@$(SED) $(SEDVER) $< > tmp.texi
+	@$(TEXI2DVI) --pdf tmp.texi
+	@$(TEXI2DVI) --pdf tmp.texi
+	@mv tmp.pdf $@
+	@rm tmp.*
 
 bitmapdll:
 	$(MAKE) -C bitmap
