Ignore Mercurial .hg directories for build/install.
git-svn-id: https://svn.r-project.org/R/trunk@51282 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/scripts/build.in
+++ b/src/scripts/build.in
@@ -173,6 +173,7 @@ foreach my $pkg (@ARGV) {
 	print EXCLUDE "$File::Find::name\n" if(-d $_ && /^\.arch-ids$/);
 	print EXCLUDE "$File::Find::name\n" if(-d $_ && /^\.bzr$/);
 	print EXCLUDE "$File::Find::name\n" if(-d $_ && /^\.git$/);
+	print EXCLUDE "$File::Find::name\n" if(-d $_ && /^\.hg$/);
 	## some authors managed to create ..Rcheck as well as pkgname.Rcheck
 	print EXCLUDE "$File::Find::name\n" if(-d $_ && /\.Rcheck$/);
 	## some authors have problems with 'Read-and-delete-me'
