any() and all() now return early if possible
The implementation now avoids checking every element of the input if the
result is already determined.

git-svn-id: https://svn.r-project.org/R/trunk@51298 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/tests/Makefile.common
+++ b/tests/Makefile.common
@@ -11,7 +11,8 @@ test-src-gct = \
 	lm-tests.R \
 	ok-errors.R \
 	method-dispatch.R \
-	array-subset.R
+	array-subset.R \
+	any-all.R
 test-src-strict-1 = \
 	$(test-src-gct) \
 	d-p-q-r-tests.R
