--- a/doc/manual/Makefile.in
+++ b/doc/manual/Makefile.in
@@ -209,7 +209,7 @@ fullrefman.dvi: $(refman_DEPENDENCIES) stamp-fullrefman-dvi
 	  $(ECHO) "\\documentclass[$${opt}]{book}"; \
 	  opt="$(R_RD4DVI)"; \
 	  $(ECHO) "\\usepackage[$${opt}]{Rd}"; \
-	  $(ECHO) "\\usepackage[latin1]{inputenc}"; \
+	  $(ECHO) "\\usepackage[utf8]{inputenc}"; \
 	  cat $(srcdir)/refman.top; \
 	  $(ECHO) "\\part{}"; \
 	  texinputs=`(for f in $(refman_TEXINPUTS); \
@@ -289,7 +289,7 @@ refman.pdf: $(refman_DEPENDENCIES) stamp-refman-pdf
 	  $(ECHO) "\\documentclass[$${opt}]{book}"; \
 	  opt="$(R_RD4PDF)"; \
 	  $(ECHO) "\\usepackage[$${opt}]{Rd}"; \
-	  $(ECHO) "\\usepackage[latin1]{inputenc}"; \
+	  $(ECHO) "\\usepackage[utf8]{inputenc}"; \
 	  cat $(srcdir)/refman.top; \
 	  texinputs=`(for f in $(refman_TEXINPUTS); \
 	    do $(ECHO) $${f}; done) | LC_COLLATE=C $(SORT)`; \
@@ -317,7 +317,7 @@ fullrefman.pdf: $(refman_DEPENDENCIES) stamp-fullrefman-pdf
 	  $(ECHO) "\\documentclass[$${opt}]{book}"; \
 	  opt="$(R_RD4PDF)"; \
 	  $(ECHO) "\\usepackage[$${opt}]{Rd}"; \
-	  $(ECHO) "\\usepackage[latin1]{inputenc}"; \
+	  $(ECHO) "\\usepackage[utf8]{inputenc}"; \
 	  cat $(srcdir)/refman.top; \
 	  $(ECHO) "\\part{}"; \
 	  texinputs=`(for f in $(refman_TEXINPUTS); \
