--- a/src/gnuwin32/cran/rdevel.in
+++ b/src/gnuwin32/cran/rdevel.in
@@ -33,18 +33,18 @@
 
 <body>
 
-<h1>R-@FULLVERSION@ build for Windows</h1>
+<h1>R-@FULLVERSION@ build for Windows (@BITSIZE@ bit)</h1>
 
 <div class="download">
-  <p><a href="@RWVER@-win32.exe">Download R-@FULLVERSION@ build for Windows</a> <span>(32 megabytes)</span></p>
+  <p><a href="@RWVER@-win@BITSIZE@.exe">Download R-@FULLVERSION@ build for Windows</a> <span>(33 megabytes, @BITSIZE@ bit)</span></p>
   <ul>
-    <li><a href="README.@RWVER@">Installation and other instructions</a></li>
-    <li>New features in this version: <a href="CHANGES.@RWVER@">Windows specific</a>, <a href="NEWS.@RWVER@">all platforms</a>.</li>
+    <li><a href="../../windows/base/README.@RWVER@">Installation and other instructions</a></li>
+    <li>New features in this version: <a href="../../windows/base/CHANGES.@RWVER@">Windows specific</a>, <a href="../../windows/base/NEWS.@RWVER@">all platforms</a>.</li>
   </ul>
 </div>
 
 
-<p>This is a Windows binary build of the @DATE@
+<p>This is a Windows @BITSIZE@ bit binary build of the @DATE@
 r@SVNREVISION@ development snapshot of R (which will eventually become
 R-@RVER@). </p>
 
@@ -56,13 +56,14 @@ them on the r-devel mailing list---but only if they persist for a day or more.</
 <h2>Frequently asked questions</h2>
 
 <ul>
-  <li><a href="rw-FAQ.html#Does-R-run-under-Windows-Vista_003f">How do I install R when using Windows Vista?</a></li>
-  <li><a href="rw-FAQ.html#What_0027s-the-best-way-to-upgrade_003f">How do I update packages in my previous version of R?</a></li>
+  <li><a href="../../windows/base/rw-FAQ.html#Does-R-run-under-Windows-Vista_003f">How do I install R when using Windows Vista?</a></li>
+  <li><a href="../../windows/base/rw-FAQ.html#What_0027s-the-best-way-to-upgrade_003f">How do I update packages in my previous version of R?</a></li>
+  <li><a href="../../windows/base/rw-FAQ.html#Should-I-run-32-bit-or-64-bit-R_003f">Should I run 32 bit or 64 bit R?</a></li>
 </ul>
   
 <p>Please see the <a
 href="http://cran.r-project.org/doc/FAQ/R-FAQ.html">R FAQ</a> for
-general information about R and the <a href="rw-FAQ.html">R Windows
+general information about R and the <a href="../../windows/base/rw-FAQ.html">R Windows
 FAQ</a> for Windows-specific information.</p>
 
 
@@ -71,7 +72,8 @@ FAQ</a> for Windows-specific information.</p>
 <ul>
   <li><a href="index.html">The current official release.</a></li>
   <li>Patches to the official release are incorporated in the <a href="rpatched.html">r-patched snapshot build</a>.</li>
-  <li><a href="old/">Previous releases</a></li>
+  <li><a href="../../windows@OTHERBITSUFFIX@/base">@OTHERBITSIZE@ bit builds for Windows</a></li>
+  <li><a href="../../windows/base/old/">Previous releases</a></li>
 </ul>
 
 <hr>
