use hyphen consistently in 64-bit expand comments to match those in R-admin
git-svn-id: https://svn.r-project.org/R/trunk@51439 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/cran/rdevel.in
+++ b/src/gnuwin32/cran/rdevel.in
@@ -58,7 +58,7 @@ them on the r-devel mailing list---but only if they persist for a day or more.</
 <ul>
   <li><a href="../../windows/base/rw-FAQ.html#Does-R-run-under-Windows-Vista_003f">How do I install R when using Windows Vista?</a></li>
   <li><a href="../../windows/base/rw-FAQ.html#What_0027s-the-best-way-to-upgrade_003f">How do I update packages in my previous version of R?</a></li>
-  <li><a href="../../windows/base/rw-FAQ.html#Should-I-run-32-bit-or-64-bit-R_003f">Should I run 32 bit or 64 bit R?</a></li>
+  <li><a href="../../windows/base/rw-FAQ.html#Should-I-run-32-bit-or-64-bit-R_003f">Should I run 32-bit or 64-bit R?</a></li>
 </ul>
   
 <p>Please see the <a
