tweaks for subarchitectures
git-svn-id: https://svn.r-project.org/R/trunk@51445 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/modules/lapack/Makefile.win
+++ b/src/modules/lapack/Makefile.win
@@ -25,7 +25,7 @@ FFLAGS=$(FOPTFLAGS)
 dlamch-FFLAGS=-ffloat-store
 
 install: $(MODULE).dll
-	$(MKDIR) -p ../../../modules$(R_ARCH)
+	@$(MKDIR) -p ../../../modules$(R_ARCH)
 	$(CP) $< ../../../modules$(R_ARCH)/$(MODULE).dll
 
 lapack-DLLLIBS=-L../../../$(IMPDIR) -lRlapack -lRblas -lR
