--- a/src/modules/internet/Makefile.win
+++ b/src/modules/internet/Makefile.win
@@ -12,14 +12,14 @@ CFLAGS=$(OPTFLAGS)
 WSOCK=-lws2_32
 
 ../../../modules$(R_ARCH)/internet.dll: internet.o nanoftp.o nanohttp.o sockconn.o Rhttpd.o Rsock.o sock.o dllversion.o
-	$(MKDIR) -p ../../../modules
+	@$(MKDIR) -p ../../../modules$(R_ARCH)
 	@$(ECHO) "EXPORTS" > internet.def
 	@$(ECHO) " R_init_internet" >> internet.def
 	$(DLL) -shared  -o $@ $^ internet.def -L../../../$(IMPDIR) -lR $(GRAPHAPP_LIB) $(WSOCK)
 	@$(RM) internet.def
 
 ../../../modules$(R_ARCH)/internet2.dll: internet2.o sockconn.o Rhttpd.o Rsock.o sock.o dllversion.o
-	$(MKDIR) -p ../../../modules
+	@$(MKDIR) -p ../../../modules$(R_ARCH)
 	@$(ECHO) "EXPORTS" > internet2.def
 	@$(ECHO) " R_init_internet2" >> internet2.def
 	$(DLL) -shared  -o $@ $^ internet2.def -L../../../$(IMPDIR) -lR $(GRAPHAPP_LIB) -lwininet $(WSOCK) 
