--- a/src/scripts/Rdiff.in
+++ b/src/scripts/Rdiff.in
@@ -36,7 +36,7 @@ exitstatus=${3}
 
 ## These are set in Renviron if run from R CMD
 ## 'grep -E' is POSIX, but not AT&T Unix, so not supported
-## by the default grep on Solarix, for example
+## by the default grep on Solaris, for example
 EGREP=${EGREP-egrep}
 SED=${SED-sed}
 
