--- a/src/gnuwin32/installer/Makefile
+++ b/src/gnuwin32/installer/Makefile
@@ -118,8 +118,9 @@ md5sums:
 fixups:
 	echo "make.packages.html(.Library, verbose=FALSE)" | $(RPREFIX)/$(BINDIR)/rterm --vanilla --slave LC_COLLATE=C
 ifeq ($(strip $(WIN)),64)
-else
 	$(CP) -pr $(R_HOME)/Tcl64 $(RPREFIX)
+else
+	$(CP) -pr $(R_HOME)/Tcl $(RPREFIX)
 endif
 
 ## for Inno Setup installer
