--- a/src/gnuwin32/installer/Makefile
+++ b/src/gnuwin32/installer/Makefile
@@ -117,11 +117,7 @@ md5sums:
 
 fixups:
 	echo "make.packages.html(.Library, verbose=FALSE)" | $(RPREFIX)/$(BINDIR)/rterm --vanilla --slave LC_COLLATE=C
-ifeq ($(strip $(WIN)),64)
-	$(CP) -pr $(R_HOME)/Tcl64 $(RPREFIX)
-else
-	$(CP) -pr $(R_HOME)/Tcl $(RPREFIX)
-endif
+	$(CP) -pr "$(TCL_HOME)" $(RPREFIX)
 
 ## for Inno Setup installer
 
