--- a/src/gnuwin32/MkRules.dist
+++ b/src/gnuwin32/MkRules.dist
@@ -32,6 +32,7 @@ ATLAS_PATH=/R/ATLAS/lib/WinNT_P4SSE2
 # If you alter this you cannot build the installer and will need to set
 # MY_TCLTK to use the package.
 TCL_HOME = $(RHOME)/Tcl
+TCL_HOME64 = $(RHOME)/Tcl64
 TCL_VERSION = 85
 
 # Define to use svnversion to set SVN-REVISION (slow, and requires a clean
