remake MkRules more comprehensively
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@51489 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/Makefile
+++ b/src/gnuwin32/Makefile
@@ -25,12 +25,13 @@ rpackages:
 	@$(MK) -C ../library -f Makefile.win all WIN=$(WIN)
 	@$(MK) -C ../library -f Makefile.win docs
 
-MkRules:
-	@if test -f MkRules.local ; then \
-	  cat MkRules.local MkRules.rules > MkRules; \
-	else \
-	  cat MkRules.dist MkRules.rules > MkRules; \
-	fi
+ifeq ($(wildcard MkRules?local),MkRules.local)
+MkRules: MkRules.local MkRules.rules
+	cat MkRules.local MkRules.rules > MkRules
+else
+MkRules: MkRules.dist MkRules.rules
+	cat MkRules.dist MkRules.rules > MkRules
+endif
 
 ## must be absolute and space-free.  
 ## NB: will not be set correctly first time through.
