use sub-architectures on 32-bit Windows Also use them for the bin directory on Windows
git-svn-id: https://svn.r-project.org/R/trunk@51491 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/Makefile
+++ b/src/gnuwin32/Makefile
@@ -277,7 +277,7 @@ distclean: clean
 	$(RM) ../../etc/Makeconf ../../etc/Rconsole ../../etc/Rdevga \
 	../../etc/Rprofile.site ../../etc/rgb.txt ../../etc/Rcmd_environ \
 	../../tests/*.Rout ../../tests/*.Rout.fail
-	$(RM) -r ../../etc/x64
+	$(RM) -r ../../etc/i386 ../../etc/x64 # do both sub-archs
 	$(RM) -r ../../share/zoneinfo
 	$(MAKE) -C fixed distclean
 	$(MAKE) -C ../include -f Makefile.win distclean
