--- a/src/gnuwin32/fixed/Makefile
+++ b/src/gnuwin32/fixed/Makefile
@@ -30,21 +30,21 @@ fixhtml:  html/rwin.html
 
 fixetc: $(wildcard ./etc/*)
 	$(CP) -p $^ $(R_HOME)/etc
+	$(RM) $(R_HOME)/etc/Makeconf
+	$(MKDIR) -p $(R_HOME)/etc/$(R_ARCH)
 ifeq ($(strip $(WIN)),64)
 	$(SED) -e 's/WIN = 32/WIN = 64/' \
 	  -e "s/-O3/-O2/" \
 	  -e "s/BINPREF =/BINPREF = $(BINPREF)/" \
-	  -e "s/IMPDIR = bin/IMPDIR = $(IMPDIR)/" \
+	  -e "s|IMPDIR = bin|IMPDIR = $(IMPDIR)|" \
 	  -e "s|LOCAL_SOFT =|LOCAL_SOFT = $(LOCAL_SOFT)|" \
 	  -e "s|R_ARCH =|R_ARCH = $(R_ARCH)|" \
-	  etc/Makeconf > $(R_HOME)/etc/Makeconf
-	$(MKDIR) -p $(R_HOME)/etc/x64
-	$(CP) -p $(R_HOME)/etc/Makeconf $(R_HOME)/etc/x64/Makeconf
-	$(RM) $(R_HOME)/etc/Makeconf
+	  etc/Makeconf > $(R_HOME)/etc$(R_ARCH)/Makeconf
 else
-	$(SED) -e "s/IMPDIR = bin/IMPDIR = $(IMPDIR)/" \
+	$(SED) -e "s|IMPDIR = bin|IMPDIR = $(IMPDIR)|" \
 	  -e "s|LOCAL_SOFT =|LOCAL_SOFT = $(LOCAL_SOFT)|" \
-	  etc/Makeconf > $(R_HOME)/etc/Makeconf
+	  -e "s|R_ARCH =|R_ARCH = $(R_ARCH)|" \
+	  etc/Makeconf > $(R_HOME)/etc$(R_ARCH)/Makeconf
 endif
 	@$(ECHO) done > fixetc
 
