--- a/src/scripts/Makefile.win
+++ b/src/scripts/Makefile.win
@@ -2,44 +2,47 @@
 include ../gnuwin32/MkRules
 R_HOME = ../..
 
-## BATCH, INSTALL and REMVOE are handled internally in Rcmd.exe
+## BATCH, INSTALL and REMOVE are handled internally in Rcmd.exe
+
+SCRIPTDIR = bin
 
 all: \
- $(R_HOME)/bin/build.pl $(R_HOME)/bin/check.pl $(R_HOME)/bin/config.sh \
- $(R_HOME)/bin/Rdconv.sh $(R_HOME)/bin/Rd2dvi.sh $(R_HOME)/bin/Sd2Rd.pl \
- $(R_HOME)/bin/Rprof.pl $(R_HOME)/bin/SHLIB.sh \
- $(R_HOME)/bin/Stangle.sh $(R_HOME)/bin/Sweave.sh
+  $(R_HOME)/$(SCRIPTDIR)/build.pl $(R_HOME)/$(SCRIPTDIR)/check.pl \
+  $(R_HOME)/$(SCRIPTDIR)/config.sh $(R_HOME)/$(SCRIPTDIR)/Rdconv.sh \
+  $(R_HOME)/$(SCRIPTDIR)/Rd2dvi.sh $(R_HOME)/$(SCRIPTDIR)/Sd2Rd.pl \
+  $(R_HOME)/$(SCRIPTDIR)/Rprof.pl $(R_HOME)/$(SCRIPTDIR)/SHLIB.sh \
+  $(R_HOME)/$(SCRIPTDIR)/Stangle.sh $(R_HOME)/$(SCRIPTDIR)/Sweave.sh
 
-$(R_HOME)/bin/check.pl: check.in
+$(R_HOME)/$(SCRIPTDIR)/check.pl: check.in
 	@$(SED) -e 1d $< > $@
 
-$(R_HOME)/bin/build.pl: build.in
+$(R_HOME)/$(SCRIPTDIR)/build.pl: build.in
 	@$(SED) -e 1d $< > $@
 
-$(R_HOME)/bin/Sd2Rd.pl: Sd2Rd.in
+$(R_HOME)/$(SCRIPTDIR)/Sd2Rd.pl: Sd2Rd.in
 	@$(SED) -e 1d $< > $@
 
-$(R_HOME)/bin/Rprof.pl: Rprof.in
+$(R_HOME)/$(SCRIPTDIR)/Rprof.pl: Rprof.in
 	@$(SED) -e 1d $< > $@
 
-$(R_HOME)/bin/Rdconv.sh: Rdconv
-	@cp $< $@
+$(R_HOME)/$(SCRIPTDIR)/Rdconv.sh: Rdconv
+	@$(SED) -e "s|/bin/R|/$(BINDIR)/R|" $< > $@
 
-$(R_HOME)/bin/Rd2dvi.sh: Rd2dvi
-	@cp $< $@
+$(R_HOME)/$(SCRIPTDIR)/Rd2dvi.sh: Rd2dvi
+	@$(SED) -e "s|/bin/|/$(BINDIR)/|" $< > $@
 
-$(R_HOME)/bin/config.sh: config
+$(R_HOME)/$(SCRIPTDIR)/config.sh: config
 ifeq ($(strip $(WIN)),64)
 	@$(SED) -e "s|R_ARCH=|R_ARCH=$(R_ARCH)|" $< > $@
 else
 	@cp $< $@
 endif
 
-$(R_HOME)/bin/SHLIB.sh: SHLIB
-	@cp $< $@
+$(R_HOME)/$(SCRIPTDIR)/SHLIB.sh: SHLIB
+	@$(SED) -e "s|/bin/R|/$(BINDIR)/R|" $< > $@
 
-$(R_HOME)/bin/Stangle.sh: Stangle
-	@cp $< $@
+$(R_HOME)/$(SCRIPTDIR)/Stangle.sh: Stangle
+	@$(SED) -e "s|/bin/R|/$(BINDIR)/R|" $< > $@
 
-$(R_HOME)/bin/Sweave.sh: Sweave
-	@cp $< $@
+$(R_HOME)/$(SCRIPTDIR)/Sweave.sh: Sweave
+	@$(SED) -e "s|/bin/R|/$(BINDIR)/R|" $< > $@
