support for combined installer
git-svn-id: https://svn.r-project.org/R/trunk@51492 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/MkRules.dist
+++ b/src/gnuwin32/MkRules.dist
@@ -70,6 +70,9 @@ BUILD_HTML = NO
 # location where Inno Setup 5.3.x was installed. Spaces allowed.
 ISDIR=C:/packages/Inno
 
+# home of 32-bit files for combined installer on 64-bit build
+HOME32=
+
 ## ====== configuration macros for building MSI installer ===========
 
 # location where WiX was installed. Spaces allowed, slashes required.
