port r51510, 51513 etc from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@51514 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/scripts/Makefile.win
+++ b/src/scripts/Makefile.win
@@ -2,7 +2,7 @@
 include ../gnuwin32/MkRules
 R_HOME = ../..
 
-## BATCH, INSTALL and REMVOE are handled internally in Rcmd.exe
+## BATCH, INSTALL and REMOVE are handled internally in Rcmd.exe
 
 all: \
  $(R_HOME)/bin/build.pl $(R_HOME)/bin/check.pl $(R_HOME)/bin/config.sh \
