Port r51522 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@51523 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/bitmap/Makefile
+++ b/src/gnuwin32/bitmap/Makefile
@@ -1,7 +1,7 @@
-## These can be overridden in MkRules
+## These can be overridden in MkRules.dist or MkRules.local
 
-## must be jpeg-6b or jpeg-7 or jpeg-8
-JPEGDIR = jpeg-8
+## must be jpeg-6b or jpeg-7 or jpeg-8 or jpeg-8a
+JPEGDIR = jpeg-8a
 PNGDIR = libpng
 TIFFDIR = libtiff
 
