--- a/src/gnuwin32/front-ends/Makefile
+++ b/src/gnuwin32/front-ends/Makefile
@@ -21,13 +21,14 @@ LARGE_ADDR=-Wl,--large-address-aware
 endif
 
 rcmdfn-CFLAGS=-DBINDIR='"$(BINDIR)"'
+Rfe-CFLAGS=-DR_ARCH='"$(R_ARCH)"'
 
 .PHONY : all makeMakedeps
 
 all: makeMakedeps \
      $(R_HOME)/$(BINDIR)/Rgui.exe $(R_HOME)/$(BINDIR)/Rterm.exe \
      $(R_HOME)/$(BINDIR)/Rcmd.exe  $(R_HOME)/$(BINDIR)/RSetReg.exe  \
-     $(R_HOME)/$(BINDIR)/R.exe \
+     $(R_HOME)/$(BINDIR)/R.exe $(R_HOME)/bin/R.exe \
      $(R_HOME)/$(BINDIR)/md5check.exe $(R_HOME)/$(BINDIR)/Rscript.exe \
      $(R_HOME)/$(BINDIR)/open.exe 
 
@@ -49,6 +50,10 @@ $(R_HOME)/$(BINDIR)/RSetReg.exe: RSetReg.exe
 
 $(R_HOME)/$(BINDIR)/R.exe: R.exe
 	$(MKDIR) -p $(R_HOME)/$(BINDIR)
+	$(CP) $^ $@	
+
+$(R_HOME)/bin/R.exe: Rfe.exe
+	$(MKDIR) -p $(R_HOME)/bin
 	$(CP) $^ $@	
 
 $(R_HOME)/$(BINDIR)/md5check.exe: md5check.exe
@@ -89,6 +94,8 @@ endif
 Rcmd.exe: rcmd.o ../rhome.o ../shext.o rcmdfn.o Renviron.o
 
 R.exe: R.o ../rhome.o ../shext.o rcico.o rcmdfn.o Renviron.o
+
+Rfe.exe: Rfe.o ../rhome.o rcico.o
 
 RSetReg.exe: RSetReg.o ../rhome.o rcico.o
 
