update for MSI installer
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@51583 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/installer/Makefile
+++ b/src/gnuwin32/installer/Makefile
@@ -144,6 +144,9 @@ files.wxs: imagedir fixups md5sums
 R.wxs: WIXins.pl uuids files.wxs
 	$(PERL) WIXins.pl $(RPREFIX) $(RPREFIX)
 
+## To change compression with Wix 3.0 use
+## light -dcl:high
+## http://www.joyofsetup.com/2008/01/28/new-wix-feature-defaultcompressionlevel/
 $(RPREFIX)-win32.msi: R.wxs License.rtf
 	"$(WIXDIR)/candle" R.wxs > $(RPREFIX).log 2>&1
 	"$(WIXDIR)/light" -out $@ R.wixobj $(WIXDIR)/wixui.wixlib \
