bar 64-bit use of make msi
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@51586 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/installer/Makefile
+++ b/src/gnuwin32/installer/Makefile
@@ -147,10 +147,16 @@ R.wxs: WIXins.pl uuids files.wxs
 ## To change compression with Wix 3.0 use
 ## light -dcl:high
 ## http://www.joyofsetup.com/2008/01/28/new-wix-feature-defaultcompressionlevel/
+ifeq ($(strip $(WIN)),64)
+$(RPREFIX)-win32.msi:
+	@echo "MSI installs for 64-bit builds are not yet supported"
+	@exit 1
+else
 $(RPREFIX)-win32.msi: R.wxs License.rtf
 	"$(WIXDIR)/candle" R.wxs > $(RPREFIX).log 2>&1
 	"$(WIXDIR)/light" -out $@ R.wixobj $(WIXDIR)/wixui.wixlib \
 	  -loc $(WIXDIR)/WixUI_en-us.wxl >> $(RPREFIX).log 2>&1
+endif
 
 
 
