add comments, change bindir
git-svn-id: https://svn.r-project.org/R/trunk@51588 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/installer/Makefile
+++ b/src/gnuwin32/installer/Makefile
@@ -152,7 +152,8 @@ files.wxs: imagedir fixups md5sums
 R.wxs: WIXins.pl uuids files.wxs
 	$(PERL) WIXins.pl $(RPREFIX) $(RPREFIX)
 
-## To change compression with Wix 3.0 use
+## for WiX 3.0 light uses -ext WixUIExtension
+## To change compression with WiX 3.0 use
 ## light -dcl:high
 ## http://www.joyofsetup.com/2008/01/28/new-wix-feature-defaultcompressionlevel/
 ifeq ($(strip $(WIN)),64)
