--- a/src/gnuwin32/installer/Makefile
+++ b/src/gnuwin32/installer/Makefile
@@ -146,10 +146,8 @@ uuidgen.exe: uuidgen.o
 uuids: uuidgen.exe
 	uuidgen 10000 > $@
 
-WIX3DIR=E:/packages/WiX3.0
-
-files.wxs:
-	"$(WIX3DIR)/heat" dir $(RPREFIX) -sw5150 -o $@
+files.wxs: imagedir fixups md5sums
+	"$(WIXDIR)/tallow" -1 -d $(RPREFIX) > $@
 
 R.wxs: WIXins.pl uuids files.wxs
 	$(PERL) WIXins.pl $(RPREFIX) $(RPREFIX)
@@ -164,9 +162,9 @@ $(RPREFIX)-win32.msi:
 	@exit 1
 else
 $(RPREFIX)-win32.msi: R.wxs License.rtf
-	"$(WIX3DIR)/candle" R.wxs > $(RPREFIX).log 2>&1
-	"$(WIX3DIR)/light" -ext WixUIExtension -out $@ \
-	  R.wixobj >> $(RPREFIX).log 2>&1
+	"$(WIXDIR)/candle" R.wxs > $(RPREFIX).log 2>&1
+	"$(WIXDIR)/light" -out $@ R.wixobj $(WIXDIR)/wixui.wixlib \
+	  -loc $(WIXDIR)/WixUI_en-us.wxl >> $(RPREFIX).log 2>&1
 endif
 
 
