remove md5check
git-svn-id: https://svn.r-project.org/R/trunk@51594 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/front-ends/Makefile
+++ b/src/gnuwin32/front-ends/Makefile
@@ -29,8 +29,7 @@ all: makeMakedeps \
      $(R_HOME)/$(BINDIR)/Rgui.exe $(R_HOME)/$(BINDIR)/Rterm.exe \
      $(R_HOME)/$(BINDIR)/Rcmd.exe  $(R_HOME)/$(BINDIR)/RSetReg.exe  \
      $(R_HOME)/$(BINDIR)/R.exe $(R_HOME)/bin/R.exe \
-     $(R_HOME)/$(BINDIR)/md5check.exe $(R_HOME)/$(BINDIR)/Rscript.exe \
-     $(R_HOME)/$(BINDIR)/open.exe 
+     $(R_HOME)/$(BINDIR)/Rscript.exe $(R_HOME)/$(BINDIR)/open.exe 
 
 $(R_HOME)/$(BINDIR)/Rgui.exe: Rgui.exe
 	$(MKDIR) -p $(R_HOME)/$(BINDIR)
@@ -54,10 +53,6 @@ $(R_HOME)/$(BINDIR)/R.exe: R.exe
 
 $(R_HOME)/bin/R.exe: Rfe.exe
 	$(MKDIR) -p $(R_HOME)/bin
-	$(CP) $^ $@	
-
-$(R_HOME)/$(BINDIR)/md5check.exe: md5check.exe
-	$(MKDIR) -p $(R_HOME)/$(BINDIR)
 	$(CP) $^ $@	
 
 $(R_HOME)/$(BINDIR)/Rscript.exe: Rscript.exe
@@ -98,9 +93,6 @@ R.exe: R.o ../rhome.o ../shext.o rcico.o rcmdfn.o Renviron.o
 Rfe.exe: Rfe.o ../rhome.o rcico.o
 
 RSetReg.exe: RSetReg.o ../rhome.o rcico.o
-
-md5check-CPPFLAGS=-I../../../include -I../../library/tools/src
-md5check.exe : md5check.o md5ico.o ../../library/tools/src/md5.o
 
 Rscript.o: ../../unix/Rscript.c
 	$(CC) $(CFLAGS) -DBINDIR='"$(BINDIR)"' -I. -I../../include -DHAVE_CONFIG_H -c $< -o $@
