allow for using 32-bit MinGW-w64 compilers
git-svn-id: https://svn.r-project.org/R/trunk@51627 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/MkRules.dist
+++ b/src/gnuwin32/MkRules.dist
@@ -42,13 +42,16 @@ TCL_VERSION = 85
 # USE_IMPLIBS = YES
 
 # Some of the compilers are in fact cross-compilers and have prefixes
-# prefix for 32-bit compiler
+# prefix for 32-bit compiler, i686-w64-mingw32- for MinGW-w64's
 BINPREF =
 # prefix for 64-bit compiler
 BINPREF64 = x86_64-w64-mingw32-
 
 # 32- or 64-bit Windows?  For MinGW-w64.
 WIN = 32
+
+# define to -DW64 if using MinGW-w64 (32- or 64-bit)
+DEFS_W64 =
 
 # set to use ICU (experimental)
 # USE_ICU=YES
