--- a/src/gnuwin32/fixed/Makefile
+++ b/src/gnuwin32/fixed/Makefile
@@ -42,6 +42,7 @@ ifeq ($(strip $(WIN)),64)
 	  etc/Makeconf > $(R_HOME)/etc$(R_ARCH)/Makeconf
 else
 	$(SED) -e "s|IMPDIR = bin|IMPDIR = $(IMPDIR)|" \
+	  -e "s/BINPREF =/BINPREF = $(BINPREF)/" \
 	  -e "s|LOCAL_SOFT =|LOCAL_SOFT = $(LOCAL_SOFT)|" \
 	  -e "s|R_ARCH =|R_ARCH = $(R_ARCH)|" \
 	  etc/Makeconf > $(R_HOME)/etc$(R_ARCH)/Makeconf
