port tweaks from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@51630 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/fixed/Makefile
+++ b/src/gnuwin32/fixed/Makefile
@@ -34,7 +34,7 @@ ifeq ($(strip $(WIN)),64)
 	$(SED) -e 's/WIN = 32/WIN = 64/' \
 	  -e "s/-O3/-O2/" \
 	  -e "s/BINPREF =/BINPREF = $(BINPREF)/" \
-	  -e "s/IMPDIR = bin/IMPDIR = $(IMPDIR)/" \
+	  -e "s|IMPDIR = bin|IMPDIR = $(IMPDIR)|" \
 	  -e "s|LOCAL_SOFT =|LOCAL_SOFT = $(LOCAL_SOFT)|" \
 	  -e "s|R_ARCH =|R_ARCH = $(R_ARCH)|" \
 	  etc/Makeconf > $(R_HOME)/etc/Makeconf
@@ -42,7 +42,7 @@ ifeq ($(strip $(WIN)),64)
 	$(CP) -p $(R_HOME)/etc/Makeconf $(R_HOME)/etc/x64/Makeconf
 	$(RM) $(R_HOME)/etc/Makeconf
 else
-	$(SED) -e "s/IMPDIR = bin/IMPDIR = $(IMPDIR)/" \
+	$(SED) -e "s|IMPDIR = bin|IMPDIR = $(IMPDIR)|" \
 	  -e "s|LOCAL_SOFT =|LOCAL_SOFT = $(LOCAL_SOFT)|" \
 	  etc/Makeconf > $(R_HOME)/etc/Makeconf
 endif
