port r51636 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@51637 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/front-ends/Makefile
+++ b/src/gnuwin32/front-ends/Makefile
@@ -81,7 +81,7 @@ Rgui.exe: rgui.o rgico64.o
 Rterm.exe: rterm.o rtico.o
 endif
 
-Rcmd.exe: rcmd.o ../rhome.o ../shext.o rcmdfn.o Renviron.o
+Rcmd.exe: rcmd.o ../rhome.o ../shext.o rcico.o rcmdfn.o Renviron.o
 
 R.exe: R.o ../rhome.o ../shext.o rcico.o rcmdfn.o Renviron.o
 
